[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["JordanBlocher <jordanblocher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.6"
matplotlib = "^3.5.3"
termcolor = "^1.1.0"
seaborn = "^0.11.2"
numpy = "^1.23.2"
pandas = "^1.4.3"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
